// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: BackdropExample BackdropExample renders examples correctly 1`] = `
<div
  className="makeStyles-container-1"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-2 MuiButton-outlinedPrimary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Show Backdrop
    </span>
  </button>
  <div
    aria-hidden={true}
    className="MuiBackdrop-root makeStyles-backdrop-3"
    onClick={[Function]}
    style={
      Object {
        "opacity": 0,
        "visibility": "hidden",
      }
    }
  >
    <div
      className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style={
        Object {
          "height": 56,
          "width": 56,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx={44}
          cy={44}
          fill="none"
          r={20.2}
          strokeWidth={3.6}
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Component: CircularProgressExample CircularProgressExample renders examples correctly 1`] = `
Array [
  <div
    className="makeStyles-container-4"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-5 MuiTypography-body1"
    >
      Indeterminate (default)
    </p>
    <div
      className="makeStyles-exampleRow-6"
    >
      <div
        className="makeStyles-progressContainer-8"
      >
        <p
          className="MuiTypography-root makeStyles-label-7 MuiTypography-body2"
        >
          Default
        </p>
        <div
          className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="makeStyles-progressContainer-8"
      >
        <p
          className="MuiTypography-root makeStyles-label-7 MuiTypography-body2"
        >
          Primary
        </p>
        <div
          className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="makeStyles-progressContainer-8"
      >
        <p
          className="MuiTypography-root makeStyles-label-7 MuiTypography-body2"
        >
          Secondary
        </p>
        <div
          className="MuiCircularProgress-root MuiCircularProgress-colorSecondary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="makeStyles-container-4"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-5 MuiTypography-body1"
    >
      Determinate
    </p>
    <div
      className="makeStyles-exampleRow-6"
    >
      <div
        className="makeStyles-progressContainer-8"
      >
        <p
          className="MuiTypography-root makeStyles-label-7 MuiTypography-body2"
        >
          Default
        </p>
        <div
          aria-valuenow={0}
          className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-determinate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "transform": "rotate(-90deg)",
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={
                Object {
                  "strokeDasharray": "126.920",
                  "strokeDashoffset": "126.920px",
                }
              }
            />
          </svg>
        </div>
      </div>
      <div
        className="makeStyles-progressContainer-8"
      >
        <p
          className="MuiTypography-root makeStyles-label-7 MuiTypography-body2"
        >
          Primary
        </p>
        <div
          aria-valuenow={0}
          className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-determinate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "transform": "rotate(-90deg)",
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={
                Object {
                  "strokeDasharray": "126.920",
                  "strokeDashoffset": "126.920px",
                }
              }
            />
          </svg>
        </div>
      </div>
      <div
        className="makeStyles-progressContainer-8"
      >
        <p
          className="MuiTypography-root makeStyles-label-7 MuiTypography-body2"
        >
          Secondary
        </p>
        <div
          aria-valuenow={0}
          className="MuiCircularProgress-root MuiCircularProgress-colorSecondary MuiCircularProgress-determinate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "transform": "rotate(-90deg)",
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={
                Object {
                  "strokeDasharray": "126.920",
                  "strokeDashoffset": "126.920px",
                }
              }
            />
          </svg>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="makeStyles-container-4"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-5 MuiTypography-body1"
    >
      Determinate w/ Label
    </p>
    <div
      className="makeStyles-exampleRow-6"
    >
      <div
        className="makeStyles-progressContainer-8"
      >
        <p
          className="MuiTypography-root makeStyles-label-7 MuiTypography-body2"
        >
          Default
        </p>
        <div
          className="MuiBox-root MuiBox-root-9"
        >
          <div
            aria-valuenow={0}
            className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-determinate"
            role="progressbar"
            style={
              Object {
                "height": 40,
                "transform": "rotate(-90deg)",
                "width": 40,
              }
            }
          >
            <svg
              className="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                className="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate"
                cx={44}
                cy={44}
                fill="none"
                r={20.2}
                strokeWidth={3.6}
                style={
                  Object {
                    "strokeDasharray": "126.920",
                    "strokeDashoffset": "126.920px",
                  }
                }
              />
            </svg>
          </div>
          <div
            className="MuiBox-root MuiBox-root-10"
          >
            <div
              className="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary"
            >
              0%
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-progressContainer-8"
      >
        <p
          className="MuiTypography-root makeStyles-label-7 MuiTypography-body2"
        >
          Primary
        </p>
        <div
          className="MuiBox-root MuiBox-root-11"
        >
          <div
            aria-valuenow={0}
            className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-determinate"
            role="progressbar"
            style={
              Object {
                "height": 40,
                "transform": "rotate(-90deg)",
                "width": 40,
              }
            }
          >
            <svg
              className="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                className="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate"
                cx={44}
                cy={44}
                fill="none"
                r={20.2}
                strokeWidth={3.6}
                style={
                  Object {
                    "strokeDasharray": "126.920",
                    "strokeDashoffset": "126.920px",
                  }
                }
              />
            </svg>
          </div>
          <div
            className="MuiBox-root MuiBox-root-12"
          >
            <div
              className="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary"
            >
              0%
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-progressContainer-8"
      >
        <p
          className="MuiTypography-root makeStyles-label-7 MuiTypography-body2"
        >
          Secondary
        </p>
        <div
          className="MuiBox-root MuiBox-root-13"
        >
          <div
            aria-valuenow={0}
            className="MuiCircularProgress-root MuiCircularProgress-colorSecondary MuiCircularProgress-determinate"
            role="progressbar"
            style={
              Object {
                "height": 40,
                "transform": "rotate(-90deg)",
                "width": 40,
              }
            }
          >
            <svg
              className="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                className="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate"
                cx={44}
                cy={44}
                fill="none"
                r={20.2}
                strokeWidth={3.6}
                style={
                  Object {
                    "strokeDasharray": "126.920",
                    "strokeDashoffset": "126.920px",
                  }
                }
              />
            </svg>
          </div>
          <div
            className="MuiBox-root MuiBox-root-14"
          >
            <div
              className="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary"
            >
              0%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Component: DialogExample DialogExample renders examples correctly 1`] = `
<div
  className="makeStyles-container-15"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-16 MuiButton-outlinedPrimary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Open Dialog
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-16 MuiButton-outlinedPrimary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Open Full Screen Dialog
    </span>
  </button>
</div>
`;

exports[`Component: LinearProgressExample LinearProgressExample renders examples correctly 1`] = `
Array [
  <div
    className="makeStyles-container-19"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-20 MuiTypography-body1"
    >
      Indeterminate (default)
    </p>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Default
      </p>
      <div
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-linearProgress-23 MuiLinearProgress-indeterminate"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
          style={Object {}}
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorPrimary"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Primary
      </p>
      <div
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-linearProgress-23 MuiLinearProgress-indeterminate"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
          style={Object {}}
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorPrimary"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Secondary
      </p>
      <div
        className="MuiLinearProgress-root MuiLinearProgress-colorSecondary makeStyles-linearProgress-23 MuiLinearProgress-indeterminate"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Indeterminate"
          style={Object {}}
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorSecondary"
          style={Object {}}
        />
      </div>
    </div>
  </div>,
  <div
    className="makeStyles-container-19"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-20 MuiTypography-body1"
    >
      Determinate
    </p>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Default
      </p>
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-linearProgress-23 MuiLinearProgress-determinate"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
          style={
            Object {
              "transform": "translateX(-100%)",
            }
          }
        />
      </div>
    </div>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Primary
      </p>
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-linearProgress-23 MuiLinearProgress-determinate"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
          style={
            Object {
              "transform": "translateX(-100%)",
            }
          }
        />
      </div>
    </div>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Secondary
      </p>
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="MuiLinearProgress-root MuiLinearProgress-colorSecondary makeStyles-linearProgress-23 MuiLinearProgress-determinate"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate"
          style={
            Object {
              "transform": "translateX(-100%)",
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="makeStyles-container-19"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-20 MuiTypography-body1"
    >
      Buffer
    </p>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Default
      </p>
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-linearProgress-23 MuiLinearProgress-buffer"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-dashed MuiLinearProgress-dashedColorPrimary"
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Buffer"
          style={
            Object {
              "transform": "translateX(-100%)",
            }
          }
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-colorPrimary MuiLinearProgress-bar2Buffer"
          style={
            Object {
              "transform": "translateX(-90%)",
            }
          }
        />
      </div>
    </div>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Primary
      </p>
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-linearProgress-23 MuiLinearProgress-buffer"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-dashed MuiLinearProgress-dashedColorPrimary"
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Buffer"
          style={
            Object {
              "transform": "translateX(-100%)",
            }
          }
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-colorPrimary MuiLinearProgress-bar2Buffer"
          style={
            Object {
              "transform": "translateX(-90%)",
            }
          }
        />
      </div>
    </div>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Secondary
      </p>
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="MuiLinearProgress-root MuiLinearProgress-colorSecondary makeStyles-linearProgress-23 MuiLinearProgress-buffer"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-dashed MuiLinearProgress-dashedColorSecondary"
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Buffer"
          style={
            Object {
              "transform": "translateX(-100%)",
            }
          }
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-colorSecondary MuiLinearProgress-bar2Buffer"
          style={
            Object {
              "transform": "translateX(-90%)",
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="makeStyles-container-19"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-20 MuiTypography-body1"
    >
      Determinate w/ Label
    </p>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Default
      </p>
      <div
        className="MuiBox-root MuiBox-root-24"
      >
        <div
          className="MuiBox-root MuiBox-root-25"
        >
          <div
            aria-valuemax={100}
            aria-valuemin={0}
            aria-valuenow={0}
            className="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-linearProgress-23 MuiLinearProgress-determinate"
            role="progressbar"
          >
            <div
              className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
              style={
                Object {
                  "transform": "translateX(-100%)",
                }
              }
            />
          </div>
        </div>
        <div
          className="MuiBox-root MuiBox-root-26"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            0%
          </p>
        </div>
      </div>
    </div>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Primary
      </p>
      <div
        className="MuiBox-root MuiBox-root-27"
      >
        <div
          className="MuiBox-root MuiBox-root-28"
        >
          <div
            aria-valuemax={100}
            aria-valuemin={0}
            aria-valuenow={0}
            className="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-linearProgress-23 MuiLinearProgress-determinate"
            role="progressbar"
          >
            <div
              className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
              style={
                Object {
                  "transform": "translateX(-100%)",
                }
              }
            />
          </div>
        </div>
        <div
          className="MuiBox-root MuiBox-root-29"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            0%
          </p>
        </div>
      </div>
    </div>
    <div
      className="makeStyles-progressContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Secondary
      </p>
      <div
        className="MuiBox-root MuiBox-root-30"
      >
        <div
          className="MuiBox-root MuiBox-root-31"
        >
          <div
            aria-valuemax={100}
            aria-valuemin={0}
            aria-valuenow={0}
            className="MuiLinearProgress-root MuiLinearProgress-colorSecondary makeStyles-linearProgress-23 MuiLinearProgress-determinate"
            role="progressbar"
          >
            <div
              className="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate"
              style={
                Object {
                  "transform": "translateX(-100%)",
                }
              }
            />
          </div>
        </div>
        <div
          className="MuiBox-root MuiBox-root-32"
        >
          <p
            className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            0%
          </p>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Component: SnackbarExample SnackbarExample renders examples correctly 1`] = `
<div
  className="makeStyles-container-33"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-34 MuiButton-outlinedPrimary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Open Simple Snackbar
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-34 MuiButton-outlinedPrimary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Open Error Snackbar
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-34 MuiButton-outlinedPrimary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Open Warning Snackbar
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-34 MuiButton-outlinedPrimary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Open Information Snackbar
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-34 MuiButton-outlinedPrimary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Open Success Snackbar
    </span>
  </button>
</div>
`;
